--- a/css/project.css
+++ b/css/project.css
@@ -17,6 +17,7 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content:center;
   gap: 40px;
   width: 100%;
   max-width: 700px;
@@ -35,7 +36,7 @@ html, body {
   box-shadow: 0 4px 12px #FF94AB;
   font-weight: 600;
   font-size: 1.5rem;
-  justify-content: center;
+  
   transition: background-color 0.3s;
   color: #FF94AB;
   }
@@ -73,7 +74,7 @@ html, body {
   gap: 20px;
   overflow-x: auto;
   margin:0 auto;
-  justify-content:center;
+
   scroll-behavior: smooth;
   flex-grow: 1;
   padding: 10px 0;
@@ -228,6 +229,19 @@ html, body {
   .card3D:active {
     cursor: grabbing;
   }
+  .iframe-wrapper {
+  width: 100%;
+  max-width: 800px;
+  height: 500px;
+  margin: auto;
+  overflow: hidden;
+}
+
+.iframe-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+}
   
   .face {
     position: absolute;
@@ -350,6 +364,7 @@ html, body {
   }
   .gallery{
     width: 260px;
+    margin:0 auto;
   }
   .header {
     width: 200px;
@@ -374,7 +389,7 @@ html, body {
   }
   .scene{
   display:flex;
-  height: 800px;
+  height: 200px;
   flex-direction:column;
   width:200px;
   }
